--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -1,4 +1,4 @@
-<nav class="w-full navbar px-4 md:px-8 flex flex-row justify-between fixed top-0 z-50 bg-[#F6B09C] shadow-black/20 shadow-md gap-x-20 lg:gap-x-20 text-black font-Montserrat" aria-label="Navegación principal">
+<nav class="w-full navbar px-4 md:px-8 flex flex-row justify-between fixed top-0 z-50 bg-[#F6B09C] shadow-black/20 shadow-md gap-x-20 lg:gap-x-20 text-black font-Lora" aria-label="Navegación principal">
     <!-- Logo con enlace a inicio -->
     <div class="navbar-start">
         <a href="/" aria-label="Ir a página de inicio">
@@ -41,8 +41,7 @@
                 </details>
             </li>
             
-            <li><a href="/HNosotros" class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg text-lg ">Sobre Nosotros</a></li>
-            <li><a href="#contacto" class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg text-lg ">Contacto</a></li>
+            <li><a href="/HContacto" class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg text-lg ">Contacto</a></li>            
         </ul>
     </div>
         
@@ -91,8 +90,7 @@
                 </details>
             </li>
             
-            <li><a href="/HNosotros" class="block hover:bg-[#FFB4A2] px-4 py-2 text-black rounded-md">Sobre Nosotros</a></li>
-            <li><a href="#contacto" class="block hover:bg-[#FFB4A2] px-4 py-2 text-black rounded-md">Contacto</a></li>
+            <li><a href="/HContacto" class="block hover:bg-[#FFB4A2] px-4 py-2 text-black rounded-md">Contacto</a></li>            
         </ul>
     </div>
 </nav>
