--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
-	<link rel="shortcut icon" href="/public/faviconri.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/public/faviconr.png" type="image/x-icon">
 	<link
 		rel="stylesheet"
 		href="/src/assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css"
@@ -12,7 +12,7 @@
 	<title>AlmaStudio</title>
 </head>
 <body>
-	<body class="font-Montserrat">
+	<body class="font-Lora">
 		<slot />
 	</body>	
 </body>
