--- a/src/pages/HEscuelaDiplomados.astro
+++ b/src/pages/HEscuelaDiplomados.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
 			<Diplomados />
 		</section>
 	</main>
-    <footer id="contacto">
+    <footer>
 		<Footer />
 	</footer>    
 </Layout>
