--- a/src/pages/MQuince.astro
+++ b/src/pages/MQuince.astro
@@ -16,7 +16,7 @@ import "../styles/global.css";
 			<Quince />
 		</section>
 	</main>
-    <footer id="contacto">
+    <footer>
 		<Footer />
 	</footer>    
 </Layout>
