--- a/src/components/contacto/contacto.astro
+++ b/src/components/contacto/contacto.astro
@@ -5,7 +5,7 @@
             <section class="w-full pt-16">
                 <div class="mx-auto w-full max-w-screen-xl px-4 sm:px-6 lg:px-8 py-6 md:py-10 lg:py-12">
                     <header class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8 lg:mb-10">
-                        <h1 class="text-2xl md:text-4xl font-bold text-center text-black/70">Nosotros</h1>
+                        <h1 class="text-2xl md:text-4xl font-bold text-center text-black/70">Contacto</h1>
                     </header>
                     
                     <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
