--- a/src/pages/HContacto.astro
+++ b/src/pages/HContacto.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from '../components/header-footer/1-Header.astro';
-import Nosotros from "../components/nosotros/nosotros.astro"
+import Contacto from "../components/contacto/contacto.astro"
 import Footer from '../components/header-footer/5-Footer.astro';
 import "../styles/global.css";
 ;
@@ -13,10 +13,10 @@ import "../styles/global.css";
 	</header>
     <main>
 		<section>
-			<Nosotros />
+			<Contacto />
 		</section>
 	</main>
-    <footer id="contacto">
+    <footer>
 		<Footer />
 	</footer>    
 </Layout>
