--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
 			<Galeria />
 		</section>
 	</main>
-	<footer id="contacto">
+	<footer>
 		<Footer />
 	</footer>	
 </Layout>
