--- a/src/components/maquillajes/Social.astro
+++ b/src/components/maquillajes/Social.astro
@@ -25,7 +25,7 @@
                     <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3" itemprop="name">Maquillaje Premium</h1>
                     <p class="text-gray-600 font-semibold mb-4 md:mb-6">
                         <span itemprop="hoursAvailable">45 a 60 min aprox</span><br>
-                        <span itemprop="price">$143.000</span> - <span class="font-bold">No incluye Peinado</span>
+                        <span itemprop="price">$150.000</span> - <span class="font-bold">No incluye Peinado</span>
                     </p>
             
                     <!-- Menú horizontal -->
@@ -174,7 +174,7 @@
                         >
                             <p>Esta técnica de maquillaje de piel blindada con Aerografía está revolucionando el mercado y cada día está más en tendencia.</p>
                             <p>Este maquillaje con aerógrafo deja una fina textura en la piel, consiguiendo acabados finos y precisos que, con cualquier otro método, serían prácticamente imposibles de conseguir.</p>
-                            <p>También es ideal para asistir a un evento social, grado, quinceañeras o novias, duración de 12 a 16 horas.</p>
+                            <p><strong>También es ideal para asistir a un evento social, grado, quinceañeras o novias, duración de 12 a 16 horas.</strong> </p>
                             <p>Maquillaje Piel Blindada con Aerografía NO incluye Peinado, si deseas también adquirir este servicio y conocer sus precios y diferentes opciones dirígete a la opción de Peinados.</p>
                         </div>
                         
@@ -187,6 +187,8 @@
                             itemprop="includes"
                         >
                             <ul class="list-disc pl-5 space-y-2 text-sm md:text-base">
+
+                                <li>Pestañas de tira o punto a punto</li>
                                 <li>Preparación ESPECIAL de la piel según tu tipo de piel con productos especializados para garantizar MAYOR RESISTENCIA</li>
                                 <li>Preparación de la piel según tu tipo de piel con productos especializados para garantizar que sea más resistente</li>
                                 <li>Hidratación</li>
