--- a/src/components/contacto/contacto.astro
+++ b/src/components/contacto/contacto.astro
@@ -19,7 +19,7 @@
                         <!-- Información de contacto -->
                         <article>
                             <h2 class="text-lg md:text-xl lg:text-2xl font-bold text-black/70 mb-2 md:mb-3">Alma Studio & Academy</h2>
-                            <p class="text-black/70 font-semibold mb-6">Estudio de maquillaje premium en Bogotá, Colombia</p>
+                            <p class="text-black/70 font-semibold mb-6">En Alma Studio y Academy ofrecemos servicios de maquillaje profesional a domicilio para todo tipo de eventos, y además formamos maquilladores integrales con técnica, pasión y propósito. Un espacio donde la belleza se vive, se enseña y se transforma.</p>
                     
                             <div class="bg-white p-4 md:p-5 rounded-lg shadow-md">
                                 <div class="text-start text-black/70 space-y-4">
