--- a/src/components/maquillajes/Novias.astro
+++ b/src/components/maquillajes/Novias.astro
@@ -154,8 +154,8 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Oro <br><span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Novias</span></h1>
-                    <p class="text-gray-600 font-semibold mb-6">$890.000</p>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Oro <br><span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Novia + Mamá</span></h1>
+                    <p class="text-gray-600 font-semibold mb-6">$940.000</p>
     
                     <!-- Menú horizontal -->
                     <div class="flex gap-2 mb-4" role="tablist" aria-label="Opciones de paquete oro">
