--- a/src/components/maquillajes/Quince.astro
+++ b/src/components/maquillajes/Quince.astro
@@ -22,8 +22,9 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Premium <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañeras</span></h1>
-                    <p class="text-gray-600 font-semibold mb-6">$540.000</p>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Premium <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañera: Día del evento + <br> Prueba de Maquillaje y Peinado
+                    </span></h1>
+                    <p class="text-gray-600 font-semibold mb-6">$590.000</p>
             
                     <!-- Menú horizontal -->
                     <div class="flex gap-2 mb-4" role="tablist" aria-label="Opciones de paquete premium">
@@ -35,7 +36,7 @@
                             aria-controls="tab1-content"
                             id="tab1-tab"
                         >
-                           Dia del Evento ($290.000)
+                           Dia del Evento
                         </button>
                         <button 
                             class="tab-btn px-4 py-2 rounded-lg font-semibold bg-gray-200 text-gray-800" 
@@ -45,7 +46,7 @@
                             aria-controls="tab2-content"
                             id="tab2-tab"
                         >
-                            Prueba Premium ($250.000)
+                            Prueba Premium
                         </button>
                     </div>
                     
@@ -90,9 +91,10 @@
                             aria-labelledby="tab2-tab"
                             itemprop="description"
                         >
+
                             <h3 class="font-semibold text-lg"><strong>Prueba Premium para la Quinceañera (Maquillaje y Peinado)</strong><h3/>
                             <p class="mt-2">Es ideal realizar una prueba de maquillaje y peinado, que será de gran ayuda porque evitarás sorpresas desagradables y tendrás la certeza de cómo lucirás.</p>
-                            <p class="mt-2">Recomendamos que la niña se lo realice, de esta manera la quinceañera como la mamá estén seguras del look que se va a llevar el día de los 15.</p>
+                            <p class="mt-2">Recomendamos a que la niña se lo realice, de esta manera la quinceañera como la mamá estén seguras del look que se va a llevar el día de los 15.</p>
                             <p class="mt-2">Ese día realizamos un análisis de imagen de Quinceañera y le realizamos el maquillaje y peinado que llevaría el día de los 15, también se realizan los ajustes necesarios para que queden completamente satisfechas.</p>
                             
                             <h3 class="mt-2 font-semibold">Nota:</h3>
@@ -139,8 +141,9 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Luxury <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañeras</span></h1>
-                    <p class="text-gray-600 font-semibold mb-6">$610.000</p>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Luxury <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañera + Mamá 
+                    </span></h1>
+                    <p class="text-gray-600 font-semibold mb-6">$820.000</p>
             
                     <!-- Menú horizontal -->
                     <div class="flex gap-2 mb-4" role="tablist" aria-label="Opciones de paquete luxury">
@@ -152,7 +155,7 @@
                             aria-controls="tab3-content"
                             id="tab3-tab"
                         >
-                            Dia del Evento ($350.000)
+                            Dia del Evento
                         </button>
                         <button 
                             class="tab-btn px-4 py-2 rounded-lg font-semibold bg-gray-200 text-gray-800" 
@@ -162,7 +165,7 @@
                             aria-controls="tab4-content"
                             id="tab4-tab"
                         >
-                            Prueba Luxury ($260.000)
+                            Prueba Luxury
                         </button>
                     </div>
                     
