--- a/src/components/maquillajes/Novias.astro
+++ b/src/components/maquillajes/Novias.astro
@@ -167,7 +167,7 @@
                             aria-controls="tab3-content"
                             id="tab3-tab"
                         >
-                            Maquillaje + Peinado ($550.000)
+                            Maquillaje + Peinado
                         </button>
                         <button 
                             class="tab-btn px-4 py-2 rounded-lg font-semibold bg-gray-200 text-gray-800" 
@@ -177,7 +177,7 @@
                             aria-controls="tab4-content"
                             id="tab4-tab"
                         >
-                            Prueba Oro ($340.000)
+                            Prueba Oro
                         </button>
                     </div>
                     
