Agregue Sobre MI

--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -43,7 +43,9 @@
                             </ul>
                         </details>
                     </li>
-                    
+
+                    <li><a href="/HENosotros" class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg text-lg ">Sobre Mi</a></li>
+
                     <li><a href="/HContacto" class="hover:bg-[#FFB4A2] hover:shadow-sm hover:text-white hover:font-semibold rounded-lg text-lg ">Contacto</a></li>            
                 </ul>
             </div>
@@ -92,6 +94,8 @@
                             </ul>
                         </details>
                     </li>
+
+                    <li><a href="/HENosotros" class="block hover:bg-[#FFB4A2] px-4 py-2 text-black rounded-md">Sobre Mi</a></li>
                     
                     <li><a href="/HContacto" class="block hover:bg-[#FFB4A2] px-4 py-2 text-black rounded-md">Contacto</a></li>            
                 </ul>
