Agregue Sobre MI

--- a/src/components/nosotros/nosotros.astro
+++ b/src/components/nosotros/nosotros.astro
@@ -44,7 +44,7 @@
                     </p>
                     
                     <p>
-                        Hoy, en AlmaMakeup, además de ofrecer maquillaje y peinado a domicilio, también formamos a nuevas maquilladoras en nuestro home studio. Porque creo profundamente en las segundas oportunidades, hemos convertido esta carrera en una alternativa de vida para muchas mujeres que están redescubriendo su camino.
+                        Hoy, en Alma Studio & Academy, además de ofrecer maquillaje y peinado a domicilio, también formamos a nuevas maquilladoras en nuestro home studio. Porque creo profundamente en las segundas oportunidades, hemos convertido esta carrera en una alternativa de vida para muchas mujeres que están redescubriendo su camino.
                     </p>
                     
                     <p>
