Agregue Sobre MI

--- a/src/components/nosotros/nosotros.astro
+++ b/src/components/nosotros/nosotros.astro
@@ -12,8 +12,9 @@
             
             <!-- Contenido abajo -->
             <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-2xl md:text-3xl font-bold text-black/70 mb-4">Luisa Sánchez Santos – Fundadora de AlmaMakeup</h2>
-                
+                <h2 class="text-2xl md:text-3xl font-bold text-black/70">Luisa Sánchez Santos</h2>                
+                <p class="text-xl md:text-2xl font-bold text-black/70 mb-4">Fundadora de AlmaMakeup</p>
+
                 <div class="text-base text-black/70 text-justify leading-relaxed space-y-4">
                     <p>
                         Soy una mujer en constante búsqueda de su mejor versión. No creo en los límites cuando se trata de crecer, aprender y transformar mi vida y la de otras mujeres.
